// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Members/> Should render Members 1`] = `
<DocumentFragment>
  <div
    class="af-main container"
  >
    <h1
      class="af-title--content"
    >
      Liste des sociétaires
    </h1>
    <div
      style="min-height: 94px; position: relative;"
    >
       
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Members/> with <Notification /> Should render Members with <Notification /> when have notifications 1`] = `
<DocumentFragment>
  <aside
    class="af-notifications af-notifications--open"
  >
    <div
      class="af-alert af-alert--notification af-alert--error"
    >
      <button
        class="af-alert__icon-close"
      >
        <i
          class="glyphicon glyphicon-close"
        />
      </button>
      <div
        class="af-alert__title"
      >
        <div
          class="af-alert__title-icon"
        >
          <i
            class="glyphicon glyphicon-minus-sign"
          />
        </div>
        <div
          class="af-alert__title-text"
        >
          title
        </div>
      </div>
    </div>
  </aside>
  <div
    class="af-main container"
  >
    <h1
      class="af-title--content"
    >
      Liste des sociétaires
    </h1>
    <div
      style="min-height: 94px; position: relative;"
    >
       
    </div>
  </div>
</DocumentFragment>
`;

exports[`<MembersItems/> Should contain 1 <Table.Tr /> element when array members contains 1 member 1`] = `
<DocumentFragment>
  <table
    class="af-table af-table--members"
  >
    <thead
      class="af-table__thead"
    >
      <tr
        class="af-table__tr"
      >
        <th
          class="af-table__th"
        >
          Nom
        </th>
        <th
          class="af-table__th"
        >
          Prénom
        </th>
        <th
          class="af-table__th"
        >
          Date de naissance
        </th>
        <th
          class="af-table__th"
        >
          Type
        </th>
      </tr>
    </thead>
    <tbody
      class="af-table__body"
    >
      <tr
        class="af-table__tr"
      >
        <td
          class="af-table__cell"
        >
          Samuel
        </td>
        <td
          class="af-table__cell"
        >
          Gomez
        </td>
        <td
          class="af-table__cell"
        >
          1985-10-20T13:44:20.540000
        </td>
        <td
          class="af-table__cell"
        >
          PP
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`<MembersItems/> Should render MembersItems 1`] = `<DocumentFragment />`;
